# explainer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  plan.md
.claude/commands/: style-check.md
crates/explainer_core/: Cargo.toml
crates/explainer_core/src/: lib.rs
crates/explainerctl/: Cargo.toml
docs/: ai_agent_instructions.md  new-project-setup.md  research.txt  style-guide.md  svg-design-guidelines.md  tools.md  tts-narration-guidelines.md  vibe-voice-strategy.md  video-checklist.md
explainer_web/: Cargo.toml  index.html
explainer_web/src/: lib.rs
projects/: ralph-wiggums
projects/apl/: ,  idiomatic-race.apl
projects/babyai-hrm/: plan.md
projects/emacs-mcp/: plan.md
projects/favicon/: plan.md
projects/neural-net-rs/: NEXT-STEPS.md  README.md
projects/rag/: plan.md
projects/ralph-wiggum/: plan.md
projects/rlm/: plan.md
projects/rlm-analysis/: plan.md
projects/rlm-war-and-peace-demo/: plan.md
projects/rolodex/: plan.md
projects/tbt4-tt-rs/: README.md
script/: scenes.yaml
scripts/: capture_frames.mjs  gen_render_plan.sh  mux_ffmpeg.sh  package.json
templates/: preview-index-html-template.html
work/scripts/: 00-title.txt  00b-subtitle.txt  01-problem.txt  01b-limits.txt  01c-examples.txt  01d-collections.txt  02-context-rot.txt  02b-rot-effect.txt  02c-name.txt  03-solution.txt  04-context-box.txt  04b-peek.txt  05-commands.txt  05b-helpers.txt  05c-deliberate.txt  06-implementation.txt  06b-wasm.txt  06c-sandbox.txt  07-analogy.txt  07b-rlm-way.txt  07c-combine.txt  08-results.txt  08b-tasks.txt  09-conclusion.txt
(+999 files in other folders)
