[package]
name = "explainer_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["UrlSearchParams", "Window", "Location"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
